--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,33 +1,27 @@
 {% extends 'base.html' %}
-{% block title %}Записи сообщества {{ group.title }}{% endblock %}
-  <body>
-    {% block content %}
-      <!-- класс py-5 создает отступы сверху и снизу блока -->
-      <div class="container py-5">
-        <h1>{{ group.title }}</h1>
-        <p>
-          {{ group.description }}
-        </p>
-        <article>
-          {% for post in posts %}
-            <ul>
-              <li>
-                Автор: {{ post.author.get_full_name }}
-              </li>
-              <li>
-                Дата публикации: {{ post.pub_date|date:"d E Y" }}
-              </li>
-            </ul>
-            <p>{{ post.text }}</p>    
-            <a href="">все записи группы</a>
-            {% if not forloop.last %}<hr>{% endif %}
-          {% endfor %}
-        </article>
-        <!-- под последним постом нет линии -->
-      </div>  
-    {% endblock %}
-    <!-- Использованы классы бустрапа: -->
-    <!-- border-top: создаёт тонкую линию сверху блока -->
-    <!-- text-center: выравнивает текстовые блоки внутри блока по центру -->
-    <!-- py-3: контент внутри размещается с отступом сверху и снизу -->         
-  </body>
+{% block title %}{{ title }}{% endblock %}
+<body>
+  {% block content %}
+    <div class="container py-5">
+      <h1>Записи сообщества {{ group.title }}</h1>
+      <p>
+        {{ group.description }}
+      </p>
+      <article>
+        {% for post in posts %}
+          <ul>
+            <li>
+              Автор: {{ post.author.get_full_name }}
+            </li>
+            <li>
+              Дата публикации: {{ post.pub_date|date:"d E Y" }}
+            </li>
+          </ul>
+          <p>{{ post.text }}</p>    
+          <a href="">все записи группы</a>
+          {% if not forloop.last %}<hr>{% endif %}
+        {% endfor %}
+      </article>
+    </div>  
+  {% endblock %}       
+</body>
