change code after rewiew

--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ title }}{% endblock %}
+{% block title %}Это главная страница проекта Yatube{% endblock %}
 <body>
   {% block content %}
     <div class="container py-5">     
