--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ title }}{% endblock %}
+{% block title %}Здесь будет информация о группах проекта Yatube{% endblock %}
 <body>
   {% block content %}
     <div class="container py-5">
