--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -4,23 +4,15 @@
   {% block content %}
     <div class="container py-5">     
       <h1>Последние обновления на сайте</h1>
-      <article>
-        {% for post in posts %}
-          <ul>
-            <li>
-              Автор: {{ post.author.get_full_name }}
-            </li>
-            <li>
-              Дата публикации: {{ post.pub_date|date:"d E Y" }}
-            </li>
-          </ul>
-          <p>{{ post.text }}</p>
+      {% for post in posts %}
+        <article>
+          {% include "includes/post_card.html"  %}
           {% if post.group %}
             <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
           {% endif %}
           {% if not forloop.last %}<hr>{% endif %}
-        {% endfor %}
-      </article>
+        </article>
+      {% endfor %}
     </div>  
   {% endblock %}       
 </body>
