--- a/yatube/templates/includes/post_card.html
+++ b/yatube/templates/includes/post_card.html
@@ -1,9 +1,22 @@
-<ul>
-  <li>
-    Автор: {{ post.author.get_full_name }}
-  </li>
-  <li>
-    Дата публикации: {{ post.pub_date|date:"d E Y" }}
-  </li>
-</ul>
-<p>{{ post.text }}</p>
+{% with request.resolver_match.view_name as view_name %}
+  <article>
+    <ul>
+      <li>
+        Автор: {{ post.author.get_full_name }}
+        {% if view_name  != 'posts:profile' %}
+          <a href="{% url 'posts:profile' post.author.username %}">все посты пользователя</a>
+        {% endif %}
+      </li>
+      <li>
+        Дата публикации: {{ post.pub_date|date:"d E Y" }}
+      </li>
+    </ul>
+    <p>{{ post.text }}</p>
+    <a href="{% url 'posts:post_detail' post.id %}">подробная информация </a>
+  </article>
+  {% if post.group %}
+    {% if view_name  != 'posts:group_list' %}
+      <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+    {% endif %}
+  {% endif %}
+{% endwith %}
