--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,18 +1,13 @@
 {% extends 'base.html' %}
-{% block title %}Здесь будет информация о группах проекта Yatube{% endblock %}
-<body>
-  {% block content %}
-    <div class="container py-5">
-      <h1>Записи сообщества {{ group.title }}</h1>
-      <p>
-        {{ group.description }}
-      </p>
-      {% for post in posts %}
-        <article>
-          {% include "includes/post_card.html"  %}
-          {% if not forloop.last %}<hr>{% endif %}
-        </article>
-      {% endfor %}
-    </div>  
-  {% endblock %}       
-</body>
+{% block title %}Записи сообщества {{ group.title }}.{% endblock %}
+{% block content %}
+  <div class="container py-5">
+    <h1>{{ group.title }}</h1>
+    <p>{{ group.description }}</p>
+    {% for post in page_obj %}
+      {% include "includes/post_card.html"  %}
+      {% if not forloop.last %}<hr>{% endif %}
+    {% endfor %}
+    {% include 'includes/paginator.html' %}
+  </div>  
+{% endblock %}
