--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,18 +1,12 @@
 {% extends 'base.html' %}
 {% block title %}Это главная страница проекта Yatube{% endblock %}
-<body>
-  {% block content %}
-    <div class="container py-5">     
-      <h1>Последние обновления на сайте</h1>
-      {% for post in posts %}
-        <article>
-          {% include "includes/post_card.html"  %}
-          {% if post.group %}
-            <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
-          {% endif %}
-          {% if not forloop.last %}<hr>{% endif %}
-        </article>
-      {% endfor %}
-    </div>  
-  {% endblock %}       
-</body>
+{% block content %}
+  <div class="container py-5">     
+    <h1>Последние обновления на сайте</h1>
+    {% for post in page_obj %}
+      {% include "includes/post_card.html"  %}
+      {% if not forloop.last %}<hr>{% endif %}
+    {% endfor %}
+    {% include 'includes/paginator.html' %}
+  </div>  
+{% endblock %}       
