add image to posts

--- a/yatube/templates/includes/form.html
+++ b/yatube/templates/includes/form.html
@@ -13,7 +13,7 @@
       </div>
     {% endfor %}
 {% endif %}
-<form method="post"
+<form method="post" enctype="multipart/form-data"
   {% if action_url %}
     action="{% url action_url %}"
   {% endif %}
