--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -30,6 +30,7 @@
       </ul>
     </aside>
     <article class="col-12 col-md-9">
+      {% include 'includes/image.html' %}
       <p>{{ post.text }}</p>
       {% if user.username == post.author.username %}
         <a class="btn btn-primary" href="{% url 'posts:post_edit' post.id %}">
