add tests comments

--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -37,7 +37,9 @@
           редактировать запись
         </a>
       {% endif %}
+      {% include 'includes/comment.html' %}
     </article>
+    
   </div>
 </div> 
 {% endblock %}
