--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -1,16 +1,13 @@
 {% extends 'base.html' %}
-{% load cache %}
-{% block title %}Это главная страница проекта Yatube{% endblock %}
+{% block title %}Посты избранных авторов{% endblock %}
 {% block content %}
   <div class="container py-5">     
-    <h1>Последние обновления на сайте</h1>
+    <h1>Посты избранных авторов</h1>
     {% include 'includes/switcher.html' %}
-    {% cache 20 index_page %}
     {% for post in page_obj %}
       {% include "includes/post_card.html"  %}
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
     {% include 'includes/paginator.html' %}
-    {% endcache %}
   </div>  
 {% endblock %}       
