--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -4,6 +4,15 @@
   <div class="container py-5">        
     <h1>Все посты пользователя {{ post_author.get_full_name }} </h1>
     <h3>Всего постов: {{ post_count }} </h3>
+    {% if following %}
+    <a class="btn btn-lg btn-light" href="{% url 'posts:profile_unfollow' post_author.username %}" role="button">
+      Отписаться
+    </a>
+    {% else %}
+      <a class="btn btn-lg btn-primary" href="{% url 'posts:profile_follow' post_author.username %}" role="button">
+        Подписаться
+      </a>
+    {% endif %}
     {% for post in page_obj %}
       {% include "includes/post_card.html"  %}
       {% if not forloop.last %}<hr>{% endif %}
